After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731455 - GtkTreeView::row-activated on empty space
GtkTreeView::row-activated on empty space
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkGesture
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-06-10 13:16 UTC by Matthias Clasen
Modified: 2014-06-11 15:58 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2014-06-10 13:16:30 UTC
I'm seeing some crashes in the gtkinspector where we get row-activated with a NULL path. The treeview docs give no hint that that is expected, so I guess it is fallout from the gesture merge.
Comment 1 Carlos Garnacho 2014-06-11 15:58:07 UTC
This is now fixed by commit 89f38b5f

Author: Carlos Garnacho <carlosg@gnome.org>
Date:   Wed Jun 11 16:29:52 2014 +0200

    treeview: Move all button press/release management to the multipress gesture
    
    The multipress gesture on the bin window now also does all the business related
    to row selection. As row selection and activation can't be easily decoupled, this
    fixes certain problems around ::row-activated being emitted on NULL paths.